force-app/main/default/objects/SPEN_DesignInformation__c/SPEN_DesignInformation__c.object-meta.xml
<CustomObject>
    <label>Design Information</label>
    <nameField>
        <displayFormat>DIN-{00000}</displayFormat>
        <label>Design Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>