force-app/main/default/objects/SPEN_DesignInformation__c/fields/SPEN_BusinessAreaOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessAreaOwner__c</fullName>
    <label>Business Area Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>