force-app/main/default/objects/SPEN_DesignInformation__c/fields/SPEN_CompletedStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompletedStatus__c</fullName>
    <label>Completed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>