force-app/main/default/objects/SPEN_DesignInformation__c/fields/SPEN_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompletionDate__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>