force-app/main/default/objects/SPEN_DesignInformation__c/fields/SPEN_DesignChecklist__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignChecklist__c</fullName>
    <label>Design Checklist</label>
    <referenceTo>SPEN_DesignChecklistRequest__c</referenceTo>
    <relationshipLabel>Design Informations</relationshipLabel>
    <relationshipName>SPEN_Design_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>