force-app/main/default/objects/SPEN_DesignInformation__c/fields/SPEN_DesignInformationDetail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignInformationDetail__c</fullName>
    <label>Design Information Detail</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>