force-app/main/default/objects/SPEN_DesignInformation__c/validationRules/SPEN_CompletionDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_CompletionDateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( SPEN_CompletedStatus__c , &quot;Yes&quot;), 
  ISBLANK( SPEN_CompletionDate__c )
)</errorConditionFormula>
    <errorDisplayField>SPEN_CompletionDate__c</errorDisplayField>
    <errorMessage>Please fill the completion date.</errorMessage>
</ValidationRule>